[package]
name = "naglfar"
version = "0.1.6"
authors = ["uint256_t <maekawatoshiki@github.com>"]

[dependencies]
app_units  = "0.6.1"
clap       = "2.33.1"
reqwest    = "0.9.0"
rand       = "0.5.5"
gtk        = "0.5.0"
gdk        = "0.9.0"
gdk-pixbuf = "0.5.0"
cairo-rs   = "0.5.0"
pango      = "0.5.0"
pangocairo = "0.6.0"
glib       = "0.6.1"


[profile.dev]
codegen-units = 16

[profile.release]
codegen-units = 16
opt-level = 3
debug = false
lto = true
debug-assertions = false
panic = "unwind"
